# sew-simulation

./: )  .gitignore  ARCHITECTURE.md  ASSESSMENT_INDEX.md  CHANGELOG.md  CLAUDE.md  COMPLETE_VALIDATION_SUMMARY.md  CORRECTED_STAKEHOLDER_BRIEF.md  DECISION_FRAMEWORK.md  DELIVERY_SUMMARY.md  DOCUMENTATION_INDEX.md  EXPERT_ASSESSMENT_REPORT.md  FALSIFICATION_ROADMAP.txt  FINAL_ASSESSMENT.md  GOVERNANCE_DECISION_BRIEF.md  LICENSE  MAINNET_LAUNCH_DECISION.md  MAINNET_READINESS_FINAL.md  MISSING_REALISM_ASSESSMENT.md  NEXT_PHASE_PRIORITY.md  PHASE_F1_RESULTS.md  PHASE_L_FINDINGS.md  PHASE_L_IMPLEMENTATION_COMPLETE.md  PHASE_M_FINDINGS.md  PHASE_N_ASSESSMENT.md  PHASE_O_FINDINGS.md  PHASE_P_LITE_COMPLETE.md  PHASE_P_LITE_LAUNCH.md  PHASE_P_LITE_RESULTS.md  PHASE_P_LITE_SPEC.md  PHASE_P_REVISED_IMPLEMENTATION.md  PHASE_P_REVISED_RESULTS.md  PHASE_P_VALIDATION_CORRECTION.md  PHASE_Q_RESULTS.md  PHASE_R_RESULTS.md  PHASE_U_RESULTS.md  PHASE_VWX_INDEX.md  PHASE_VWX_VALIDATION_SUMMARY.md  PHASE_V_RESULTS.md  PHASE_W_RESULTS.md  (+33 more)
python/: README.md  adversarial_agent.py  adversarial_profitability_sweep.py  attack_outcome_map.py  debug_test.py  debug_test2.py  debug_test3.py  debug_test4.py  debug_test5.py  demo_live.py  eth_failure_modes.py  eth_failure_modes_2.py  invariant_suite.py  phase_k_robustness.py  phase_l_optimistic.py  property_tests.py  pyproject.toml  resolver_withdrawal_adversarial.py  smoke_test_readiness.py  test_b1_final.py  test_b1_final2.py  test_b1_final3.py  test_debug2.py  test_debug_keys.py  test_dispatch.py  test_final.py  test_fix.py  test_full.py  test_int.py  (+9 more)
(+708 files in other folders)
