[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sew-sim"
version = "0.1.0"
description = "Python adversarial scenario generator for the SEW simulation system"
requires-python = ">=3.11"
dependencies = [
    "simpy>=4.1.1",
    "hypothesis>=6.100.0",
    "pydantic>=2.6.0",
    "grpcio>=1.64.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-hypothesis",
]

[project.scripts]
sew-gen = "sew_sim.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["sew_sim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires running Clojure gRPC server on localhost:7070",
]
